--- a/_pgbackup/index_1511850061.html
+++ b/_pgbackup/index_1511850061.html
@@ -25,7 +25,7 @@
                         <div class="inner">
                             <h3 class="masthead-brand">Gutierrez3D</h3>
                             <nav class="nav nav-masthead">
-                                <a class="nav-link active" href="#">Inicio</a>
+                                <a class="nav-link active" href="#">Home</a>
                                 <a class="nav-link" href="#">Features</a>
                                 <a class="nav-link" href="#">Contact</a>
                             </nav>
