--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> 
                         <i class="fa fa-bars"></i> 
                     </button>                     
-                    <a class="navbar-brand page-scroll" href="#page-top"> <i class="fa fa-paper-plane-o"></i> Modus</a> 
+                    <a class="navbar-brand page-scroll" href="#page-top">TUWEBYTODO<br></a> 
                 </div>                 
                 <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse"> 
@@ -75,8 +75,9 @@
                     <div class="row"> 
                         <div class="col-md-10 col-md-offset-1"> 
                             <h1>TU WEB <span class="brand-heading">Y TODO</span></h1> 
-                            <p class="intro-text">DOMINIO, PAGINA WEB Y CORREO ELECTRÓNICO PERSONALIZADO</p> 
-                            <a href="#about" class="btn btn-default page-scroll">LEER MAS</a> 
+                            <p class="intro-text">DOMINIO, PAGINA WEB Y CORREO ELECTRÓNICO PERSONALIZADO</p>
+                            <p class="intro-text">PERESOZAAAAAAAAA PONTE LAS PILAS¡¡¡¡</p> 
+                            <a href="#about" class="btn btn-default page-scroll">LEER MAS</a>
                         </div>                         
                     </div>                     
                 </div>                 
@@ -84,11 +85,11 @@
         </div>         
         <!-- About Section -->         
         <div id="about"> 
-            <div class="container"> 
-                <div class="section-title text-center center"> 
-                    <h2>About us</h2> 
+            <div class="container">                  
+                <div class="section-title text-center center">                      
+                    <h2>About us</h2>
                     <hr> 
-                </div>                 
+                </div>
                 <div class="row"> 
                     <div class="col-md-4">
                         <img src="img/about.jpg" class="img-responsive">
