--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         <hr> </div>
       <div class="row">
         <div class="col-md-12 text-center">
-          <img src="img/about.jpg" class="img-responsive">
-        </div>
+          <img src="img/about.jpg" class="img-responsive"> </div>
         <div class="col-md-8 col-md-offset-2">
           <div class="about-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
@@ -151,7 +150,7 @@
                 <a href="#" data-filter=".app">App Development</a>
               </li>
               <li>
-                <a href="#" data-filter=".branding">Branding</a>
+                <a href="https://drive.google.com/open?id=1fRB5ECQqYe5Nq-57iGauJHbpc8dqYXLO">Branding</a>
               </li>
             </ol>
           </li>
@@ -163,10 +162,10 @@
           <div class="col-sm-6 col-md-3 col-lg-3 web">
             <div class="portfolio-item">
               <div class="hover-bg">
-                <a href="img/portfolio/01-large.jpg" title="Project description" rel="prettyPhoto">
+                <a href="img/portfolio/01-large_1.jpg" title="Project description" rel="prettyPhoto">
                   <div class="hover-text">
                     <h4>Project Title</h4> <small>Web Design</small> </div>
-                  <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a>
+                  <img src="img/portfolio/01-large.jpg" class="img-responsive" alt="Project Title"> </a>
               </div>
             </div>
           </div>
@@ -441,7 +440,7 @@
         <div class="social">
           <ul>
             <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="https://drive.google.com/open?id=1fRB5ECQqYe5Nq-57iGauJHbpc8dqYXLO"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa fa-twitter"></i></a>
