--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div class="social">
           <ul>
             <li>
-              <a href="https://drive.google.com/open?id=1fRB5ECQqYe5Nq-57iGauJHbpc8dqYXLO"><i class="fa fa-facebook"></i></a>
+              <a href="https://drive.google.com/file/d/1fRB5ECQqYe5Nq-57iGauJHbpc8dqYXLO/view?usp=sharing"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa fa-twitter"></i></a>
