--- a/_pgbackup/index_1521492118.html
+++ b/_pgbackup/index_1521492118.html
@@ -86,7 +86,7 @@
         <div id="about"> 
             <div class="container"> 
                 <div class="section-title text-center center"> 
-                    <h2>QUE PEDOOOOoooooooo¡¡¡¡</h2> 
+                    <h2>QUE PEDOOOO SAY¡¡¡¡</h2> 
                     <hr> 
                 </div>                 
                 <div class="row"> 
