--- a/_pgbackup/index_1521496499.html
+++ b/_pgbackup/index_1521496499.html
@@ -35,7 +35,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> 
                         <i class="fa fa-bars"></i> 
                     </button>                     
-                    <a class="navbar-brand page-scroll" href="#page-top"> <i class="fa fa-laptop"></i> tu web y todo</a> 
+                    <a class="navbar-brand page-scroll" href="#page-top"> <i class="fa fa-paper-plane-o"></i> Modus</a> 
                 </div>                 
                 <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <div class="collapse navbar-collapse navbar-right navbar-main-collapse"> 
@@ -45,22 +45,22 @@
                             <a href="#page-top"></a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#about">Conocenos</a> 
-                        </li>                         
-                        <li>
-                            <a class="page-scroll" href="#services">Servicios</a>                              
+                            <a class="page-scroll" href="#about">About</a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#works">trabajos</a> 
+                            <a class="page-scroll" href="#services">Services</a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#team">Equipo</a> 
+                            <a class="page-scroll" href="#works">Portfolio</a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#testimonials">Testimonios</a> 
+                            <a class="page-scroll" href="#team">Team</a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#contact">Contacto</a> 
+                            <a class="page-scroll" href="#testimonials">Testimonials</a> 
+                        </li>                         
+                        <li> 
+                            <a class="page-scroll" href="#contact">Contact</a> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -72,11 +72,11 @@
         <div id="intro"> 
             <div class="intro-body"> 
                 <div class="container"> 
-                    <div class="row" style="margin-top: -221px;"> 
+                    <div class="row"> 
                         <div class="col-md-10 col-md-offset-1"> 
                             <h1>TU WEB <span class="brand-heading">Y TODO</span></h1> 
                             <p class="intro-text">Una solución completa con dominio, página web y correo electrónico.</p> 
-                            <a class="btn btn-default page-scroll" href="#about">Leer más</a> 
+                            <a href="#about" class="btn btn-default page-scroll">Leer más</a> 
                         </div>                         
                     </div>                     
                 </div>                 
