--- a/_pgbackup/index_1521606290.html
+++ b/_pgbackup/index_1521606290.html
@@ -48,7 +48,7 @@
                             <a class="page-scroll" href="#about">Conocenos</a> 
                         </li>                         
                         <li>
-                            <a class="page-scroll" href="#services">Servicios</a> 
+                            <a class="page-scroll" href="#services">Servicios</a>                              
                         </li>                         
                         <li> 
                             <a class="page-scroll" href="#works">trabajos</a> 
@@ -73,7 +73,7 @@
             <div class="intro-body"> 
                 <div class="container"> 
                     <div class="row" style="margin-top: -221px;"> 
-                        <div class="col-md-10 col-md-offset-1" style="top: 115px;"> 
+                        <div class="col-md-10 col-md-offset-1"> 
                             <h1>TU WEB <span class="brand-heading">Y TODO</span></h1> 
                             <p class="intro-text">Una solución completa con dominio, página web y correo electrónico.</p> 
                             <a class="btn btn-default page-scroll" href="#about">Leer más</a> 
@@ -390,7 +390,7 @@
                                     <i class="fa fa-quote-left"></i> 
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p> 
                                     <div class="clients-name"> 
-                                        <p><strong>John Doe</strong><br> <em>CEO, Company Inc.</em></p> 
+                                        <p><strong>John Doe</strong><br>  <em>CEO, Company Inc.</em></p> 
                                     </div>                                     
                                 </blockquote>                                 
                             </div>                             
@@ -399,7 +399,7 @@
                                     <i class="fa fa-quote-left"></i> 
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p> 
                                     <div class="clients-name"> 
-                                        <p><strong>Jane Doe</strong><br> <em>CEO, Company Inc.</em></p> 
+                                        <p><strong>Jane Doe</strong><br>  <em>CEO, Company Inc.</em></p> 
                                     </div>                                     
                                 </blockquote>                                 
                             </div>                             
@@ -408,7 +408,7 @@
                                     <i class="fa fa-quote-left"></i> 
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitduis sed dapibus leo nec ornare.</p> 
                                     <div class="clients-name"> 
-                                        <p><strong>Chris Smith</strong><br> <em>CEO, Company Inc.</em></p> 
+                                        <p><strong>Chris Smith</strong><br>  <em>CEO, Company Inc.</em></p> 
                                     </div>                                     
                                 </blockquote>                                 
                             </div>                             
