--- a/_pgbackup/index_1522450410.html
+++ b/_pgbackup/index_1522450410.html
@@ -73,7 +73,7 @@
             <div class="intro-body"> 
                 <div class="container"> 
                     <div class="row" style="margin-top: -221px;"> 
-                        <div class="col-md-10 col-md-offset-1" style="top: 115px;"> 
+                        <div class="col-md-10 col-md-offset-1"> 
                             <h1>TU WEB <span class="brand-heading">Y TODO</span></h1> 
                             <p class="intro-text">Una solución completa con dominio, página web y correo electrónico.</p> 
                             <a class="btn btn-default page-scroll" href="#about">Leer más</a> 
