--- a/_pgbackup/index_1522470672.html
+++ b/_pgbackup/index_1522470672.html
@@ -73,10 +73,7 @@
             <div class="intro-body"> 
                 <div class="container"> 
                     <div class="row" style="margin-top: -221px;"> 
-                        <div class="col-md-10 col-md-offset-1 " style="top: 23px;
-    bottom: 104px;
-    right: 111px;
-    left: 10px;"> 
+                        <div class="col-md-10 col-md-offset-1" style="top: 115px;"> 
                             <h1>TU WEB <span class="brand-heading">Y TODO</span></h1> 
                             <p class="intro-text">Una solución completa con dominio, página web y correo electrónico.</p> 
                             <a class="btn btn-default page-scroll" href="#about">Leer más</a> 
@@ -89,7 +86,7 @@
         <div id="about"> 
             <div class="container"> 
                 <div class="section-title text-center center"> 
-                    <h2>CONOCENOS</h2> 
+                    <h2>QUE PEDOOOOoooooooo¡¡¡¡</h2> 
                     <hr> 
                 </div>                 
                 <div class="row"> 
