--- a/_pgbackup/index_1522471692.html
+++ b/_pgbackup/index_1522471692.html
@@ -98,14 +98,14 @@
                     </div>                     
                     <div class="col-md-4"> 
                         <div class="about-text"> 
-                            <h4>QUIENES SOMOS</h4> 
+                            <h4>Who We Are</h4> 
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p> 
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum. </p> 
                         </div>                         
                     </div>                     
                     <div class="col-md-4"> 
                         <div class="about-text"> 
-                            <h4>QUE ES LO QUE HACEMOS</h4> 
+                            <h4>What We Do</h4> 
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam.</p> 
                             <ul> 
                                 <li>Lorem ipsum dolor sit amet</li>                                 
@@ -122,7 +122,7 @@
         <div id="services" class="text-center"> 
             <div class="container"> 
                 <div class="section-title center"> 
-                    <h2>Nuestros Servicios</h2> 
+                    <h2>Our Services</h2> 
                     <hr> 
                 </div>                 
                 <div class="space"></div>                 
@@ -194,7 +194,7 @@
             <div class="container"> 
                 <!-- Container -->                 
                 <div class="section-title text-center center"> 
-                    <h2>Nuestro Portafolio</h2> 
+                    <h2>Our Portfolio</h2> 
                     <hr> 
                     <div class="clearfix"></div>                     
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> 
@@ -334,7 +334,7 @@
         <div id="team" class="text-center"> 
             <div class="container"> 
                 <div class="section-title center"> 
-                    <h2>Nuestro Equipo</h2> 
+                    <h2>Meet the team</h2> 
                     <hr> 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> 
                 </div>                 
@@ -382,7 +382,7 @@
         <div id="testimonials" class="text-center"> 
             <div class="container"> 
                 <div class="section-title center"> 
-                    <h2>lo que dicen nuestros clientes</h2> 
+                    <h2>What our clients say</h2> 
                     <hr> 
                 </div>                 
                 <div class="row"> 
@@ -424,7 +424,7 @@
         <div id="contact" class="text-center"> 
             <div class="container"> 
                 <div class="section-title center"> 
-                    <h2>Contactanos</h2> 
+                    <h2>Contact us</h2> 
                     <hr> 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> 
                 </div>                 
