--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head> 
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <title>Modus</title>         
-        <meta name="description" content=""> 
-        <meta name="author" content=""> 
+        <title>TU WEB Y TODO</title>         
+        <meta name="descripcion" content=""> 
+        <meta name="tu web y todo" content=""> 
         <!-- Bootstrap -->         
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> 
         <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"> 
@@ -94,19 +94,19 @@
                 </div>                 
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img src="img/about.jpg" class="img-responsive">
+                        <img src="img/web.jpg" class="img-responsive">
                     </div>                     
                     <div class="col-md-4"> 
                         <div class="about-text"> 
                             <h4>QUIENES SOMOS</h4> 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p> 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum. </p> 
+                            <p>Somos una startup dedicada a ofrecer un servicio completo para impulsar a los pequeños negocios a tener una imagen en internet.  </p> 
+                            <p>Una página web es una forma de incursionar un negocio en Internet, pero muchas veces es complicado administrarla. </p> 
                         </div>                         
                     </div>                     
                     <div class="col-md-4"> 
                         <div class="about-text"> 
                             <h4>QUE ES LO QUE HACEMOS</h4> 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam.</p> 
+                            <p>Ofrecemos a nuestros clientes la oportunidad de contar con una página web y un correo electronico personalizado, todo administrado con mandar un solo mail. </p> 
                             <ul> 
                                 <li>Lorem ipsum dolor sit amet</li>                                 
                                 <li>Consectetur adipiscing commodo</li>                                 
@@ -130,7 +130,7 @@
                     <div class="col-md-3 col-sm-6"> 
                         <div class="service"> 
                             <i class="fa fa-desktop"></i> 
-                            <h3>Web Design</h3> 
+                            <h3>Diseño Web</h3> 
                             <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p> 
                         </div>                         
                     </div>                     
