--- a/_pgbackup/index_1522538908.html
+++ b/_pgbackup/index_1522538908.html
@@ -156,22 +156,22 @@
                         </div>                         
                     </div>                     
                 </div>                 
-                <div class="service">
-                    <i class="fa fa-money"></i> 
-                    <h3>Pagos seguros y rapidos</h3> 
-                    <p>Paga a través de mercado pago sin necesidad de una cuenta o que necesites una tarjeta de credito/débito.</p> 
-                </div>
                 <div class="space"></div>                 
-                <div class="row">
-                    <div class="service col-lg-12">
-                        <i class="fa fa-clock-o"></i> 
-                        <h3>30 días de prueba</h3> 
-                        <p>Prueba nuestro servicio por 30 días, muestra tu página web y presume tu correo, si no te gusta puedes cancelarlo en cualquier momento sin compromiso.</p> 
+                <div class="row"> 
+                    <div class="col-md-3 col-sm-6" style="right: -284px;"> 
+                        <div class="service">
+                            <i class="fa fa-clock-o"></i> 
+                            <h3>30 días de prueba</h3> 
+                            <p>Prueba nuestro servicio por 30 días, muestra tu página web y presume tu correo, si no te gusta puedes cancelarlo en cualquier momento sin compromiso.</p> 
+                        </div>                         
                     </div>                     
-                    <div class="col-md-3 col-sm-6" style="right: -284px;">                          
-</div>                     
-                    <div class="col-md-3 col-sm-6" style="right: -303px;">                          
-</div>                                                               
+                    <div class="col-md-3 col-sm-6" style="right: -303px;"> 
+                        <div class="service">
+                            <i class="fa fa-money"></i> 
+                            <h3>Pagos seguros y rapidos</h3> 
+                            <p>Paga a través de mercado pago sin necesidad de una cuenta o que necesites una tarjeta de credito/débito.</p> 
+                        </div>                         
+                    </div>                                                               
                 </div>                 
             </div>             
         </div>         
@@ -318,25 +318,14 @@
         </div>         
         <!-- Team Section -->         
         <div id="team" class="text-center"> 
-            <div class="container" style="margin-left: 42px;
-    margin-right: -44px;
-    padding-right: 7px;
-    padding-left: -150px;
-    right: -107px;
-    left: -58px;
-    width: -77px;"> 
+            <div class="container"> 
                 <div class="section-title center"> 
                     <h2>Nuestros Planes</h2> 
                     <hr> 
                     <p>Escoge alguno de nuestros planes deacuerdo a tus necesidades, puedes elevar o bajar tu plan sin compromiso.</p> 
                 </div>                 
-                <div id="row" style="right: 1px;
-    top: 1px;
-    bottom: 1px;
-    left: 1px;"> 
-                    <div class="col-xs-6 col-md-3 col-sm-6 col-lg-12" style="right: -26px;
-    padding-left: 6px;
-    margin-left: -12px;"> 
+                <div id="row"> 
+                    <div class="col-xs-6 col-md-3 col-sm-6" style="right: -58px;"> 
                         <div class="thumbnail"> 
                             <img src="img/team/basico.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
@@ -345,10 +334,7 @@
                             </div>                             
                         </div>                         
                     </div>                     
-                    <div class="col-xs-6 col-md-3 col-sm-6 col-lg-10" style="right: -26px;
-    padding-left: 6px;
-    margin-left: -12px;
-    margin-right: 2px;"> 
+                    <div class="col-xs-6 col-md-3 col-sm-6" style="right: -140px;"> 
                         <div class="thumbnail"> 
                             <img src="img/team/medio.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
@@ -357,11 +343,7 @@
                             </div>                             
                         </div>                         
                     </div>                     
-                    <div class="col-md-3 col-sm-6 col-xs-9 col-lg-12" style="right: -133px;
-    margin-left: -30px;
-    margin-right: -22px;
-    padding-right: 135px;
-    padding-left: -8px;"> 
+                    <div class="col-xs-6 col-md-3 col-sm-6" style="right: -195px;"> 
                         <div class="thumbnail"> 
                             <img src="img/team/plus.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
@@ -421,21 +403,57 @@
                 <div class="section-title center"> 
                     <h2>Contactanos</h2> 
                     <hr> 
-                    <p>Empieza a disfrutar de la experiencia de tener una página web y correo personalizado con solo mandar un correo.</p> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p> 
                 </div>                 
-                <div class="col-md-8 col-md-offset-2">                      
+                <div class="col-md-8 col-md-offset-2"> 
+                    <div class="col-md-4"> 
+                        <div class="contact-item"> 
+                            <i class="fa fa-map-marker fa-2x"></i> 
+                            <p>4321 California St,<br> 
+            San Francisco, CA 12345</p> 
+                        </div>                         
+                    </div>                     
                     <div class="col-md-4"> 
                         <div class="contact-item"> 
                             <i class="fa fa-envelope-o fa-2x"></i> 
-                            <p>clientes@tuwebytodo.com</p> 
+                            <p>info@company.com</p> 
                         </div>                         
-                    </div>                                          
+                    </div>                     
+                    <div class="col-md-4"> 
+                        <div class="contact-item"> 
+                            <i class="fa fa-phone fa-2x"></i> 
+                            <p> +1 123 456 1234<br> 
+            +1 321 456 1234</p> 
+                        </div>                         
+                    </div>                     
                     <div class="clearfix"></div>                     
                 </div>                 
                 <div class="col-md-8 col-md-offset-2"> 
-                    <h3>Leave us a message</h3>                      
+                    <h3>Leave us a message</h3> 
+                    <form name="sentMessage" id="contactForm" novalidate> 
+                        <div class="row"> 
+                            <div class="col-md-6"> 
+                                <div class="form-group"> 
+                                    <input type="text" id="name" class="form-control" placeholder="Name" required="required"> 
+                                    <p class="help-block text-danger"></p> 
+                                </div>                                 
+                            </div>                             
+                            <div class="col-md-6"> 
+                                <div class="form-group"> 
+                                    <input type="email" id="email" class="form-control" placeholder="Email" required="required"> 
+                                    <p class="help-block text-danger"></p> 
+                                </div>                                 
+                            </div>                             
+                        </div>                         
+                        <div class="form-group"> 
+                            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>                             
+                            <p class="help-block text-danger"></p> 
+                        </div>                         
+                        <div id="success"></div>                         
+                        <button type="submit" class="btn btn-default">Send Message</button>                         
+                    </form>                     
                     <div class="social"> 
-                        <h3>Siguenos</h3> 
+                        <h3>Follow us</h3> 
                         <ul> 
                             <li>
                                 <a href="#"><i class="fa fa-facebook"></i></a>
