--- a/_pgbackup/index_1522554559.html
+++ b/_pgbackup/index_1522554559.html
@@ -168,10 +168,10 @@
                         <h3>30 días de prueba</h3> 
                         <p>Prueba nuestro servicio por 30 días, muestra tu página web y presume tu correo, si no te gusta puedes cancelarlo en cualquier momento sin compromiso.</p> 
                     </div>                     
-                    <div class="col-md-3 col-sm-6" style="right: -284px;"> 
+                    <div class="col-md-3 col-sm-6" style="right: -284px;">                          
 </div>                     
-                    <div class="col-md-3 col-sm-6" style="right: -303px;"> 
-</div>                     
+                    <div class="col-md-3 col-sm-6" style="right: -303px;">                          
+</div>                                                               
                 </div>                 
             </div>             
         </div>         
@@ -348,7 +348,7 @@
                     <div class="col-xs-6 col-md-3 col-sm-6 col-lg-10" style="right: -26px;
     padding-left: 6px;
     margin-left: -12px;
-    margin-right: -83px;"> 
+    margin-right: 2px;"> 
                         <div class="thumbnail"> 
                             <img src="img/team/medio.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
@@ -358,18 +358,18 @@
                         </div>                         
                     </div>                     
                     <div class="col-md-3 col-sm-6 col-xs-9 col-lg-12" style="right: -133px;
-    margin-left: -28px;
-    margin-right: 0px;
-    padding-right: 1px;
+    margin-left: -30px;
+    margin-right: -22px;
+    padding-right: 135px;
     padding-left: -8px;"> 
                         <div class="thumbnail"> 
-                            <img src="img/team/plus.png" alt="..." class="img-thumbnail team-img" style="right: 0px;"> 
+                            <img src="img/team/plus.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
                                 <h3>MEDIO + ALIAS CUENTAS CORREO ILIMITADAS</h3> 
                                 <p>? / MES</p> 
                             </div>                             
                         </div>                         
-                    </div>                     
+                    </div>                                          
                 </div>                 
             </div>             
         </div>         
@@ -423,17 +423,17 @@
                     <hr> 
                     <p>Empieza a disfrutar de la experiencia de tener una página web y correo personalizado con solo mandar un correo.</p> 
                 </div>                 
-                <div class="col-md-8 col-md-offset-2"> 
-                    <div class="col-md-4" style="right: -253px;"> 
+                <div class="col-md-8 col-md-offset-2">                      
+                    <div class="col-md-4"> 
                         <div class="contact-item"> 
                             <i class="fa fa-envelope-o fa-2x"></i> 
                             <p>clientes@tuwebytodo.com</p> 
                         </div>                         
-                    </div>                     
+                    </div>                                          
                     <div class="clearfix"></div>                     
                 </div>                 
                 <div class="col-md-8 col-md-offset-2"> 
-                    <h3>Leave us a message</h3> 
+                    <h3>Leave us a message</h3>                      
                     <div class="social"> 
                         <h3>Siguenos</h3> 
                         <ul> 
