--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </li>                         
                     </ul>                     
                 </div>                 
-                <!-- Collect the nav links, forms, and other content for toggling -->                                  
+                <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <!-- /.navbar-collapse -->                 
             </div>             
             <!-- /.container -->             
@@ -317,7 +317,7 @@
             </div>             
         </div>         
         <!-- Team Section -->         
-        <div id="team" class="text-center"> 
+        <div id="team" class="text-center">
             <div class="container" style="margin-left: 42px;
     margin-right: -44px;
     padding-right: 7px;
@@ -341,7 +341,10 @@
                             <img src="img/team/basico.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
                                 <h3>DOMINIO Y PAGINA WEB</h3> 
-                                <p>? / MES</p> 
+                                <p>$ 100 / MES</p>
+                                <p>$ 100 / ANUALES</p>
+                                <p>PROMOCIÓN: UN CAMBIO DE DISEÑO DE LOGO</p>
+                                <p>DESCUENTO DE DOS MESES AL CONTRATAR ANUAL</p> 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -353,7 +356,10 @@
                             <img src="img/team/medio.png" alt="..." class="img-thumbnail team-img"> 
                             <div class="caption"> 
                                 <h3>BASICO + UNA CUENTA DE CORREO PERSONALIZADO</h3> 
-                                <p>? / MES</p> 
+                                <p>$150 / MES</p>
+                                <p>$ 1200 / MES</p>
+                                <p>PROMOCIÓN: DOS CAMBIOS DE DISEÑO DE LOGO</p>
+                                <p>DESCUENTO DE DOS MESES AL CONTRATAR PLAN ANUAL</p> 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -366,12 +372,15 @@
                             <img src="img/team/plus.png" alt="..." class="img-thumbnail team-img" style="right: 0px;"> 
                             <div class="caption"> 
                                 <h3>MEDIO + ALIAS CUENTAS CORREO ILIMITADAS</h3> 
-                                <p>? / MES</p> 
+                                <p>$ 200 / MES</p>
+                                <p>$1700 / MES</p>
+                                <p>PROMOCION: TRES CAMBIOS DE DISEÑO DE LOGO</p>
+                                <p>DESCUENTO DE TRES MESES AL CONTRATAR PLAN ANUAL</p> 
                             </div>                             
                         </div>                         
                     </div>                     
                 </div>                 
-            </div>             
+            </div>
         </div>         
         <!-- Testimonials Section -->         
         <div id="testimonials" class="text-center"> 
@@ -432,7 +441,7 @@
                     </div>                     
                     <div class="clearfix"></div>                     
                 </div>                 
-                <div class="col-md-8 col-md-offset-2">                      
+                <div class="col-md-8 col-md-offset-2"> 
                     <div class="social"> 
                         <h3>Siguenos</h3> 
                         <ul> 
